# superqsim

./: .gitignore  CLAUDE.md  LICENSE  README.md  README.tex  devices.py  pyproject.toml  requirements.txt  transmon_demo.ipynb
notebooks/: transmon_demo.ipynb
src/superqsim/: __init__.py  devices.py
tests/: conftest.py  test_transmon.py  test_transmon_resonator.py  test_tunable_coupler_system.py
